--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,9 @@ body {
     background-color:#FDFDF7; 
     color:#387181;
     text-align:center;
-	height:100%
+	height:100%;
+	overflow-x:hidden;
+	overflow-y:scroll;
 }
 
 #header{
@@ -50,7 +52,6 @@ ul{
 }
 
 hr{
-	width: 100%;
 	size:1px;
 	border-color:#387181;
 }
